# 3DComplete-Project-by-ARMA

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Dataset Homework PCL  Makefile  README  alvise  cmake_install.cmake  coplanarity  dataset  output.pcd  progetto  run.sh
src/: Hmw_2final.cpp  Hmw_2final.cpp~  codice_progetto.cpp  coplanarity.cpp  prova_segmentation.cpp  untitled.cpp
src/include/: coplanarity.h  costanti_progetto.h  funzioni_progetto.h  funzioni_segmentation.h  segmentation_plane.h
